--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,18 @@
 # Site settings
-name: Edwin E. Exemplar
-email: edwin+contactme@someemail.com
+name: Rohan P. Kathe
+email: rohan.kathe1990@gmail.com
 #canonical_url: https://edwinexemplar.com
-keywords: "Software Engineer, Python, Ruby, Machine Learning, Deep Learning, Startups, Agile, Pair Programming"
-skills: "Senior Software Engineer in Seattle, WA (Fictitious)"
+keywords: "Software Developer, .NET Framework, ASP.NET MVC, Umbraco, C#, Machine Learning"
+skills: "Software Developer in Mumbai"
 baseurl:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 # You should replace these with your social networks, of course. :)
 social:
   - title: linkedin
-    url: https://www.linkedin.com/in/cgroom/
-  - title: medium
-    url: https://medium.com/@cgroom
+    url: https://www.linkedin.com/in/rohan-kathe-57813882
   - title: twitter
-    url: https://twitter.com/chuck_groom
+    url: https://twitter.com/awesomerohann
     
 # Google webmaster tools
 google_verify:
