--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: Rohan P. Kathe
 email: rohan.kathe1990@gmail.com
 #canonical_url: https://edwinexemplar.com
 keywords: "Software Developer, .NET Framework, ASP.NET MVC, Umbraco, C#, Machine Learning"
-skills: "Software Developer in Mumbai"
+skills: "Software Developer, Mumbai"
 baseurl:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
